Adjust to latest jextract changes